# VolumeManager

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.13  README.md  build_and_run.sh  conanfile.txt
docs/api/: CommunicationStandard.md
docs/contributing/: Development.md
include/: GreeterTag.h  IApplication.hpp  IDockerManager.hpp  IGreeter.h
include/docker/: IDockerManager.hpp
include/gateway/: IHttpClient.hpp
include/model/: ContainerInfo.hpp
scripts/: build_and_test.sh  clean.sh  release_and_run.sh  release_only.sh
src/: Application.cpp  Application.hpp  Greeter.cpp  Greeter.h  main.cpp
src/docker/: DockerManager.cpp  DockerManager.hpp
src/gateway/: HttpClient.cpp  HttpClient.hpp
test/: Application.cpp  test.cpp
